Revise Ultra Mode description in index.html
Updated the description of Ultra Mode in the HTML.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <button class="secondary" id="tweet">Tweet prefill</button>
       </div>
       <p class="muted">
-        Ultra Mode (today): hold <span class="mono">$REPLY</span> → more replies + share card + leaderboard.
+        Ultra Mode: planned for holders.
+        This page is the demo.
       </p>
       <textarea id="out" placeholder="Click Generate…"></textarea>
       <p class="muted">
