Add Ultra page with wallet gating

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <div class="pill">Trenches reply generator • share-first tool</div>
     <h1>REPLY ENGINE</h1>
     <p class="sub">Generate trenches replies in 1 click. Post faster. Farm attention.</p>
+<p style="margin-top:14px;">
+  <a href="/reply-engine/ultra/" style="color:#9ad;font-weight:600;">
+    🔓 Unlock Ultra (holders)
+  </a>
+</p>
 
     <div class="card">
       <div class="row">
